hotfix: avoid unnecessary scrollbar in drawer

--- a/dspublisher/theme/global.css
+++ b/dspublisher/theme/global.css
@@ -676,3 +676,8 @@ span.badge-preview,
   background-color: var(--yellow-800);
   color: var(--yellow-50);
 }
+
+/* DSP bugfix */
+nav[aria-label=sections] {
+  contain: layout;
+}
